--- a/app/views/users/_review_form.html
+++ b/app/views/users/_review_form.html
@@ -3,5 +3,5 @@
   <%= f.input :owner_stars %>
   <%= f.input :accuracy_of_event_stars %>
   <%= f.text_area :review %>
-  <%= f.button :submit %>
+  <%= f.button :submit, {class: "round tagalong-button fix-button"} %>
 <% end %>
