--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -14,7 +14,7 @@
 		<li class="has-form nav-bar-button"><%= link_to "Profile", user_path(current_user), {class: "button round log-in"} %></li>
 		<li class="has-form nav-bar-button"><%= link_to "Workouts", posts_path, {class: "button round log-in"} %></li>
     <% if current_user.pending_tagalongs.length != 0 %>
-    <li class="has-form nav-bar-button"><%= link_to "Notifications", pending_path, {class: "button round notificationsToApprove"} %></li>
+    <li class="has-form nav-bar-button"><%= link_to "Notifications", pending_path, {class: "button round notifications"} %></li>
 		<% else %>
     <li class="has-form nav-bar-button"><%= link_to "Notifications", pending_path, {class: "button round log-in"} %></li>
     <% end %>
