--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -18,13 +18,15 @@
 				</div>
 				<div class="row workout-content">
 					<div class="small-12 columns">
-						<p><%= link_to "View", post_path(p) %></p>
+						<p><%= link_to "View", post_path(p), :class => 'button round tagalong-button expand' %></p>
 					</div>
 				</div>
 			</div>
 		</div>
 		<% end %>
-		<%= link_to "Create Post", new_post_path %>
+		<%= link_to new_post_path do %>
+			<div class ='button round new-button expand'>Add New Workout <%= image_tag 'plus32.png', class: 'plus-button' %></div>
+		<% end %>
 	</div>
 	<div class="small-12 medium-8 columns">
 		<div class="row">
@@ -34,22 +36,30 @@
 		</div>
 		<% @posts.each do |p| %>
 		<div class="row">
-			<div class="small-12 columns workout">
+			<div class="small-12 columns workout workout-cell">
 				<div class="row workout-content">
-					<div class="small-4 columns">
+					<div class="small-6 columns">
 						<h4 class="workout-title"><%= p.title %></h4>
 					</div>
-					<div class="small-5 small-offset-3 end columns">
+					<div class="small-5 small-offset-1 end columns">
 						<h4 class="workout-time"><%= p.datetime %></h4>
 					</div>
 				</div>
 				<div class="row workout-content">
-					<div class="small-12 columns">
-						<p><%= p.topic %></p>
+					<div class="small-10 columns">
+						<div class="row">
+							<div class="small-12 columns">
+								<p><%= p.topic %></p>
+							</div>
+							<div class="small-12 columns">
+								<p><%= p.details %></p>
+							</div>
+						</div>
 					</div>
-					<div class="small-12 columns">
-						<p><%= p.details %></p>
-						<p><%= link_to "View", post_path(p) %></p>
+					<div class="small-2 columns text-right">
+						<%= link_to post_path(p) do %>
+						<%= image_tag 'add-icon.png', class: 'next-icon' %>
+						<% end %>
 					</div>
 				</div>
 			</div>
