--- a/app/views/users/_show_review.html.erb
+++ b/app/views/users/_show_review.html.erb
@@ -2,6 +2,6 @@
 <%= tagalong.review.accuracy_of_event_stars %>
 <%= tagalong.review.review %>
 
-<%= link_to review_path(tagalong.review), :method => 'delete', :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure you want to permanently destroy this review?')) }, :class => 'button radius alert' do%>
-<p> Delete Review </p>
+<%= link_to review_path(tagalong.review), :method => 'delete', :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure you want to permanently destroy this review?')) }, :class => 'button round alert' do%>
+Delete Review
 <% end %>
