--- a/app/views/users/pending_tagalongs.html.erb
+++ b/app/views/users/pending_tagalongs.html.erb
@@ -1,18 +1,29 @@
-<% if @pending_tagalongs.length != 0 %>
-<table>
-	<% @pending_tagalongs.each do |pt| %>
-		<tr>
-			<td><%= pt.user.proper_name.to_s %> wants to join you on <%= pt.post.title %> on <%= pt.post.datetime %>. Is that ok?</td>
-			<td><% if pt.approved.nil? || pt.approved == false %> 
-                <%= link_to edit_tagalong_path(id: pt.id, status: "approved") do %>
-                  <%= image_tag 'checkmark_empty.png', class: 'checkmark' %>
-                <% end %>
-              <% end %>
-            </td>
-		</tr>
-	<% end %>
-</table>
+<div class="row">
+    <div class="row">
+      <div class="small-12 columns section-header">
+        <h4 class="avenir-header workout-title">Notifications</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="small-12 columns">
+		<% if @pending_tagalongs.length != 0 %>
+		<table>
+			<% @pending_tagalongs.each do |pt| %>
+				<tr>
+					<td><%= pt.user.proper_name.to_s %> wants to join you on <%= pt.post.title %> on <%= pt.post.datetime %>. Is that ok?</td>
+					<td><% if pt.approved.nil? || pt.approved == false %> 
+		                <%= link_to edit_tagalong_path(id: pt.id, status: "approved") do %>
+		                  <%= image_tag 'checkmark_empty.png', class: 'checkmark' %>
+		                <% end %>
+		              <% end %>
+		            </td>
+				</tr>
+			<% end %>
+		</table>
 
-<% else %>
-	<p>All done! No requests left to approve.</p>
-<% end %>
+		<% else %>
+			<p>All done! No requests left to approve.</p>
+		<% end %>
+      </div>
+    </div>
+</div>
