--- a/app/views/users/_show_review.html.erb
+++ b/app/views/users/_show_review.html.erb
@@ -1,6 +1,6 @@
-<%= tagalong.review.owner_stars %>
-<%= tagalong.review.accuracy_of_event_stars %>
-<%= tagalong.review.review %>
+<b>Owner Stars:</b> <%= tagalong.review.owner_stars %><br>
+<b>Accuracy of Event Stars:</b> <%= tagalong.review.accuracy_of_event_stars %> <br>
+<b>Review:</b> <%= tagalong.review.review %> <br>
 
 <%= link_to review_path(tagalong.review), :method => 'delete', :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure you want to permanently destroy this review?')) }, :class => 'button round alert' do%>
 Delete Review
