--- a/app/views/users/pending_tagalongs.html.erb
+++ b/app/views/users/pending_tagalongs.html.erb
@@ -5,25 +5,24 @@
       </div>
     </div>
     <div class="row">
-      <div class="small-12 columns">
+      
 		<% if @pending_tagalongs.length != 0 %>
-		<table>
 			<% @pending_tagalongs.each do |pt| %>
-				<tr>
-					<td><%= pt.user.proper_name.to_s %> wants to join you on <%= pt.post.title %> on <%= pt.post.datetime %>. Is that ok?</td>
-					<td><% if pt.approved.nil? || pt.approved == false %> 
-		                <%= link_to edit_tagalong_path(id: pt.id, status: "approved") do %>
-		                  <%= image_tag 'checkmark_empty.png', class: 'checkmark' %>
-		                <% end %>
-		              <% end %>
-		            </td>
-				</tr>
+			<% if pt.approved.nil? || pt.approved == false %> 
+			<%= link_to edit_tagalong_path(id: pt.id, status: "approved") do %><div class="button round expand notification-button">
+				<div class="small-9 columns">
+					<h6><%= pt.user.proper_name.to_s %> wants to join you on <%= pt.post.title %> on <%= pt.post.datetime %>. Is that ok?</h6>
+				</div>
+				<div class="small-1 ends columns">
+		                  <%= image_tag 'checkmark_empty.png', class: 'checkmark' %>	
+				</div>
+			</div> <% end %> <% end %>
 			<% end %>
-		</table>
 
 		<% else %>
-			<p>All done! No requests left to approve.</p>
+		 <div class="small-12 columns">
+		 	<h4>All done! No requests left to approve.</h4>
+      	</div>
 		<% end %>
-      </div>
     </div>
 </div>
