--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -10,7 +10,7 @@
 		</div>
 		  <%= f.input :topic %>
 		  <!-- Need to insert datetime picker -->
-		  <%= f.input :start, as: :string, start_date: Date.today, input_html: {class: "datepicker"}, label: "Start Date and Time" %>
+		  <%= f.input :start, as: :string, start_date: Date.today, input_html: {class: "datepicker"}, label: "Workout Date" %>
 		  <%= f.input :expected_duration_hr, label: "Expected Duration (Hour)" %>
 		  <%= f.input :expected_duration_min, label: "Expected Duration (Min)" %>
 		  <%= f.input :details %>
