--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -13,7 +13,7 @@
       <%= f.input :about_me %>
       <%= f.hidden_field :role,  value: :user%>
       <%= f.input :photo %>
-      <%= f.button :submit %>
+      <%= f.button :submit, {class: "round button tagalong-button"} %>
     <% end %>
   </div>
 </div>
