--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,10 @@
-<h3>Sign up</h3>
-
-<p>Already have an account? <%= link_to "Log in", login_path %>.</p>
+<div class="row">
+      <div class="small-12 columns section-header">
+        <h4 class="avenir-header workout-title">Sign up</h4>
+      </div>
+      <div class="small-12 columns">
+        <p class="login-header">Already have an account? <%= link_to "Log in", login_path %>.</p>
+      </div>
+    </div>
 
 <%= render 'form' %>
