--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -126,7 +126,7 @@ $include-html-global-classes: $include-html-classes;
 // We use these to control various global styles
 // $body-bg: $white;
 // $body-font-color: $jet;
-// $body-font-family: $font-family-sans-serif;
+   $body-font-family: Montserrat;
 // $body-font-weight: $font-weight-normal;
 // $body-font-style: normal;
 
@@ -1499,6 +1499,9 @@ select.time{
 	width: 25%;
 }
 
+select.datetime{
+	width: 15%;
+}
 
 div.post_expected_duration_hr{
 	width: 45%;
