Centered line on notifications

--- a/app/views/users/pending_tagalongs.html.erb
+++ b/app/views/users/pending_tagalongs.html.erb
@@ -21,7 +21,7 @@
 
 		<% else %>
 		 <div class="small-12 columns">
-		 	<h4>All done! No requests left to approve.</h4>
+		 	<h4 style="text-align: center;">All done! No requests left to approve.</h4>
       	</div>
 		<% end %>
     </div>
