--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -58,7 +58,11 @@
             <% if !(Tagalong.exists?(:user_id => current_user.id, :post_id => @post.id )) && current_user.id != @post.owner_id %>
               <%= render partial: "addtagalong_form", locals: { post: @post} %>
             <% end %>
-            <%= link_to "Back", posts_path, :class => 'button round snag-button fix-button' %>
+
+            <% if @post.owner_id == current_user.id %>
+            <%= link_to "Edit Your Post", edit_post_path(@post), class: 'button round snag-button fix-button' %>
+            <% end %>
+            <%= link_to "Back", posts_path, class: 'button round snag-button fix-button' %>
           </div>
         </div>
       </div>
